--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -28,6 +28,7 @@ settings:
 rules:
   import/extensions: 0
   react/prop-types: 0
+  react/function-component-definition: 0
   no-console: 0
   functional/no-conditional-statement: 0
   functional/no-expression-statement: 0
@@ -35,3 +36,4 @@ rules:
   functional/functional-parameters: 0
   functional/no-try-statement: 0
   functional/no-throw-statement: 0
+  jsx-a11y/label-has-associated-control: [2, { "controlComponents": ["Field"] }]
