--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/algins/frontend-project-lvl4#readme",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "core-js": "^3.21.1",
     "debug": "^4.3.3",
     "fastify": "^3.27.2",
@@ -32,7 +33,9 @@
     "fastify-sensible": "^3.1.2",
     "fastify-socket.io": "^3.0.0",
     "fastify-static": "^4.5.0",
+    "formik": "^2.2.9",
     "http-errors": "^2.0.0",
+    "i18next": "^21.8.4",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "pino-pretty": "^7.5.1",
@@ -40,7 +43,11 @@
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
     "react": "^17.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.9",
+    "react-router-dom": "^5.3.3",
+    "regenerator-runtime": "^0.13.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.3",
