--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.9",
     "react-router-dom": "^5.3.3",
