--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -29,6 +29,7 @@ rules:
   import/extensions: 0
   react/prop-types: 0
   react/function-component-definition: 0
+  react/jsx-no-constructed-context-values: 0
   no-console: 0
   functional/no-conditional-statement: 0
   functional/no-expression-statement: 0
