--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "homepage": "https://github.com/algins/frontend-project-lvl4#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
@@ -47,6 +48,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.9",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "regenerator-runtime": "^0.13.9",
     "yup": "^0.32.11"
