--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "regenerator-runtime": "^0.13.9",
+    "socket.io-client": "^4.5.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
