--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/algins/frontend-project-lvl4#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
+    "@rollbar/react": "^0.11.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
